gobmkida/g3/defend3
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend3/src/engine/reading.c:2061:13: error: use of undeclared identifier 'dword_785CFC'
v46 = v44 + dword_785CFC[i]; 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend3/src/engine/reading.c:2174:22: error: use of undeclared identifier 'dword_785CFC'
v11 = ( unsigned int)dword_785CFC[v77]; 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend3/src/engine/reading.c:2291:44: error: use of undeclared identifier 'xmmword_4AEC30'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4AEC30); 
                                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend3/src/engine/reading.c:2380:7: error: use of undeclared identifier 'dword_785CFC'
v34 = dword_785CFC[v32]; 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/defend3/src/obj/1/reading.o] Error 1
